c4prj2_input/grade.txt
Grading at Sat 07 Oct 2023 07:16:50 AM UTC
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘add_future_card’:
future.c:15:13: error: ‘i’ undeclared (first use in this function)
   15 |   fc->decks[i].cards = realloc(fc->decks[i].cards, sizeof(*fc->decks[i].cards)*(fc->decks[i].n_cards+1));
      |             ^
future.c:15:13: note: each undeclared identifier is reported only once for each function it appears in
Compilation of future.c failed

Overall Grade: F
